cleaning and updating repo

--- a/Higgs_Xgboost.ipynb
+++ b/Higgs_Xgboost.ipynb
@@ -2,32 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "c450be82",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/media/Data_linux/anaconda3/envs/pytorch_learning/lib/python3.9/site-packages/xgboost/compat.py:36: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
-      "  from pandas import MultiIndex, Int64Index\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import xgboost as xgb\n",
+    "#import xgboost as xgb\n",
     "import matplotlib as plt\n",
     "import scipy\n",
     "import os\n",
     "import inspect\n",
     "import sys\n",
-    "import hyperopt\n",
-    "from hyperopt import hp, fmin ,tpe, Trials\n",
-    "from xgboost import plot_tree\n",
+    "#import hyperopt\n",
+    "#from hyperopt import hp, fmin ,tpe, Trials\n",
+    "#from xgboost import plot_tree\n",
     "from sklearn import tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "bbd0e02d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/media/Data_linux/anaconda3/bin/python'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.executable"
    ]
   },
   {
@@ -3462,7 +3474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
